# qtac-cli

./: README.md  do_build.bat
.github/workflows/: build.yml
docs/: taccl-plan.md
interfaces/C++/TACDev/: CMakeLists.txt
tools/taccl/: BootSequences.cpp  BootSequences.h  CMakeLists.txt  Commands.cpp  Commands.h  DEMO.md  Device.cpp  Device.h  DeviceList.cpp  DeviceList.h  Errors.h  Output.cpp  Output.h  QUICKSTART.md  QuickCommands.cpp  QuickCommands.h  README.md  ScriptVars.cpp  ScriptVars.h  StateControls.cpp  StateControls.h  Utility.cpp  Utility.h  main.cpp  probe.cpp  taccl_baseline_a_only.json  test_baseline.py
